@@ -6,7 +6,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.ss.usermodel.Sheet;
@@ -111,7 +110,7 @@ public class EligibleStudentServiceImpl implements EligibleStudentService {
                         .gpa(s.getGpa())
                         .currentSemester(s.getCurrentSemester())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
